VAG-101: fix minor layout bugs

--- a/styles/sections/home/_services.scss
+++ b/styles/sections/home/_services.scss
@@ -55,7 +55,6 @@
 		position: relative;
 		max-width: 358px;
 		margin: 68px auto 0;
-		cursor: pointer;
 
 		@include screen-xs {
 			padding-right: 12px;
